--- a/task1.html
+++ b/task1.html
@@ -21,10 +21,10 @@
 	</style>
 </head>
 <body>
-	<div class="container">
+	<div class="wrap">
 		<div id="green"></div><!-- /#green -->
 		<div id="red"></div><!-- /#red -->
-	</div><!-- /.container -->
+	</div><!-- /.wrap -->
 	
 </body>
 </html>
