--- a/task7Tests/tdd.html
+++ b/task7Tests/tdd.html
@@ -8,7 +8,7 @@
 <body>
 	<div id="myElement"></div><!-- /#myElement -->
 
-	
+	<div class="test1"></div><!-- /.test1 -->
 
 	<script src="red_green.js"></script>
 	<script src="tdd_hello_world.js"></script>
